style(Refer): prevent text overflow

--- a/source/styles/_partial/article.styl
+++ b/source/styles/_partial/article.styl
@@ -271,3 +271,7 @@
   padding: 0 1rem
   margin-left: 1rem
   font-size: 0.8rem
+  max-width: 40%
+  overflow: hidden
+  white-space: nowrap
+  text-overflow: ellipsis
