--- a/source/styles/_partial/profile.styl
+++ b/source/styles/_partial/profile.styl
@@ -1,5 +1,7 @@
 .profile
   display: flex
+  white-space: nowrap
+  text-overflow: ellipsis
   .avatar
     margin-right: 0.2rem
     width: 1.5rem
